[gd_scene load_steps=131 format=3 uid="uid://cj2t32ek8qj4j"]

[ext_resource type="Script" path="res://assets/scripts/nucleo_01/actividad_02.gd" id="1_chl37"]
[ext_resource type="Texture2D" uid="uid://bcvsr1lnjx76a" path="res://img/nucleo_01/fondo/linea_1_1.png" id="2_j0085"]
[ext_resource type="Texture2D" uid="uid://crlwgmko53bm3" path="res://img/nucleo_01/fondo/linea_1_2.png" id="3_odkld"]
[ext_resource type="Texture2D" uid="uid://dv8ub8pikchyy" path="res://img/nucleo_01/fondo/linea_1_3.png" id="4_arhdg"]
[ext_resource type="Texture2D" uid="uid://p8as5llb73ky" path="res://img/nucleo_01/fondo/linea_1_4.png" id="5_nulrn"]
[ext_resource type="Texture2D" uid="uid://qpgum1kyav4k" path="res://img/nucleo_01/fondo/linea_1_5.png" id="6_gxunf"]
[ext_resource type="Texture2D" uid="uid://d16qanjua6vgh" path="res://img/nucleo_01/fondo/linea_1_6.png" id="7_et666"]
[ext_resource type="Texture2D" uid="uid://dfrclm318fyov" path="res://img/nucleo_01/fondo/linea_1_7.png" id="8_pxarg"]
[ext_resource type="Texture2D" uid="uid://m8ii12su1b6i" path="res://img/nucleo_01/fondo/linea_1_8.png" id="9_8mbff"]
[ext_resource type="Texture2D" uid="uid://42rj2ghqrfes" path="res://img/nucleo_01/fondo/linea_1_9.png" id="10_lpqw8"]
[ext_resource type="Texture2D" uid="uid://p6pocamco8ok" path="res://img/nucleo_01/fondo/linea_1_10.png" id="11_ndkkh"]
[ext_resource type="Texture2D" uid="uid://d3gbfe48b73as" path="res://img/nucleo_01/fondo/linea_1_11.png" id="12_yuhj7"]
[ext_resource type="Texture2D" uid="uid://5pumco516i7a" path="res://img/nucleo_01/fondo/linea_1_12.png" id="13_yhtjl"]
[ext_resource type="Texture2D" uid="uid://cmao7fuouhfom" path="res://img/nucleo_01/fondo/linea_1_13.png" id="14_20o8n"]
[ext_resource type="Texture2D" uid="uid://tq5hbnjjflu1" path="res://img/nucleo_01/fondo/linea_1_14.png" id="15_hljlb"]
[ext_resource type="Texture2D" uid="uid://c1x10wy4bnrl6" path="res://img/nucleo_01/fondo/linea_1_15.png" id="16_2s8vq"]
[ext_resource type="Texture2D" uid="uid://cpimt3of8ppen" path="res://img/nucleo_01/fondo/linea_1_16.png" id="17_qm0we"]
[ext_resource type="Texture2D" uid="uid://jrqgymtojaji" path="res://img/nucleo_01/fondo/linea_1_17.png" id="18_xfwra"]
[ext_resource type="Texture2D" uid="uid://dbq657pq6v2h0" path="res://img/nucleo_01/fondo/linea_1_18.png" id="19_bvngo"]
[ext_resource type="Texture2D" uid="uid://dlutqn3f1dlm4" path="res://img/nucleo_01/fondo/linea_1_19.png" id="20_cf3eo"]
[ext_resource type="Texture2D" uid="uid://bhfsceq7aap1y" path="res://img/nucleo_01/tarea_1/borde.png" id="21_u5ljh"]
[ext_resource type="Texture2D" uid="uid://bllfluvxma2hn" path="res://img/nucleo_01/tarea_2/redimensionar.png" id="22_7xbcg"]
[ext_resource type="Texture2D" uid="uid://dpg4id1huxijl" path="res://img/nucleo_01/tarea_2/boton.png" id="23_r716y"]
[ext_resource type="Texture2D" uid="uid://dyld0a0pnmm3e" path="res://img/nucleo_01/tarea_2/boton_2.png" id="24_rkg4b"]
[ext_resource type="Texture2D" uid="uid://c3b6tg7gpaho0" path="res://img/nucleo_01/tarea_2/info.png" id="25_jb7v4"]
[ext_resource type="Texture2D" uid="uid://b36jddkg757q7" path="res://img/nucleo_01/tarea_2/red_2.png" id="26_l5u4p"]
[ext_resource type="Texture2D" uid="uid://diytu0gjyxhg6" path="res://img/barra de carga/carga_1.png" id="27_5mtda"]
[ext_resource type="Texture2D" uid="uid://dn7aa80dtvspl" path="res://img/barra de carga/carga_2.png" id="28_vuvip"]
[ext_resource type="Texture2D" uid="uid://b6w7bswqmx625" path="res://img/barra de carga/carga_3.png" id="29_duhxu"]
[ext_resource type="Texture2D" uid="uid://dexfo1rjvipn2" path="res://img/barra de carga/carga_4.png" id="30_v0ovj"]
[ext_resource type="Texture2D" uid="uid://dx5m04mpltbtw" path="res://img/barra de carga/carga_5.png" id="31_u10fe"]
[ext_resource type="Texture2D" uid="uid://cyei6ohgm4nxy" path="res://img/barra de carga/carga_6.png" id="32_fk2fv"]
[ext_resource type="Texture2D" uid="uid://cuhyx2vveokwd" path="res://img/barra de carga/carga_7.png" id="33_e03rd"]
[ext_resource type="Texture2D" uid="uid://b4373qwigfc5a" path="res://img/barra de carga/carga_8.png" id="34_aurd6"]
[ext_resource type="Texture2D" uid="uid://7ksdy104dqfq" path="res://img/barra de carga/carga_9.png" id="35_r66hi"]
[ext_resource type="Texture2D" uid="uid://h4eita70f43s" path="res://img/barra de carga/carga_10.png" id="36_eovrg"]
[ext_resource type="Texture2D" uid="uid://b4esnritxvbx0" path="res://img/barra de carga/carga_11.png" id="37_lohhl"]
[ext_resource type="Texture2D" uid="uid://dfxaqcpbpxa0r" path="res://img/barra de carga/carga_12.png" id="38_3ifv8"]
[ext_resource type="Texture2D" uid="uid://dvbpr3ng3iv65" path="res://img/barra de carga/carga_13.png" id="39_s37v5"]
[ext_resource type="Texture2D" uid="uid://cngg2tsq57t7n" path="res://img/barra de carga/carga_14.png" id="40_qpgoi"]
[ext_resource type="Texture2D" uid="uid://n1kul51f5d34" path="res://img/barra de carga/carga_15.png" id="41_qf5ab"]
[ext_resource type="Texture2D" uid="uid://fyve1gmbo7fo" path="res://img/barra de carga/carga_16.png" id="42_3wdcn"]
[ext_resource type="Texture2D" uid="uid://b8t6sl1f4c06n" path="res://img/barra de carga/carga_17.png" id="43_ilkj8"]
[ext_resource type="Texture2D" uid="uid://5642awehy4kf" path="res://img/barra de carga/carga_18.png" id="44_yicvn"]
[ext_resource type="Texture2D" uid="uid://cr5drkmxqt2q6" path="res://img/barra de carga/carga_19.png" id="45_xa5lr"]
[ext_resource type="Texture2D" uid="uid://cgykvipw0a3j5" path="res://img/barra de carga/carga_20.png" id="46_nfmrl"]
[ext_resource type="Texture2D" uid="uid://dngx01nx0urj8" path="res://img/barra de carga/carga_21.png" id="47_o54un"]
[ext_resource type="Texture2D" uid="uid://dwykgg2int7vr" path="res://img/barra de carga/carga_22.png" id="48_jtjs3"]
[ext_resource type="Texture2D" uid="uid://bwo1uj7dq5d81" path="res://img/barra de carga/carga_23.png" id="49_8jolj"]
[ext_resource type="Texture2D" uid="uid://drrly5lv3nh2q" path="res://img/barra de carga/carga_24.png" id="50_s5lp3"]
[ext_resource type="Texture2D" uid="uid://wey0gyw60mhs" path="res://img/barra de carga/carga_25.png" id="51_ivy62"]
[ext_resource type="Texture2D" uid="uid://cevv3rx5vh00u" path="res://img/barra de carga/carga_26.png" id="52_v8hno"]
[ext_resource type="Texture2D" uid="uid://cdrpatkewkfjw" path="res://img/barra de carga/carga_27.png" id="53_6hf4j"]
[ext_resource type="Texture2D" uid="uid://ckrew8mmt2add" path="res://img/barra de carga/carga_28.png" id="54_5hrv1"]
[ext_resource type="Texture2D" uid="uid://yl56mhddrv50" path="res://img/barra de carga/carga_29.png" id="55_d4k0q"]
[ext_resource type="Texture2D" uid="uid://blhewu71xymiq" path="res://img/barra de carga/carga_30.png" id="56_n4cjt"]
[ext_resource type="Texture2D" uid="uid://c8b1n3t8twe07" path="res://img/barra de carga/carga_31.png" id="57_sjsqe"]
[ext_resource type="Texture2D" uid="uid://dgpqo17aulhch" path="res://img/barra de carga/carga_32.png" id="58_t3cxs"]
[ext_resource type="Texture2D" uid="uid://dtpyns4qsehjg" path="res://img/barra de carga/carga_33.png" id="59_w1grw"]
[ext_resource type="Texture2D" uid="uid://ipge25aqi8ig" path="res://img/barra de carga/carga_34.png" id="60_8g7ul"]
[ext_resource type="Texture2D" uid="uid://b8fs562m2la31" path="res://img/barra de carga/carga_35.png" id="61_4sb17"]
[ext_resource type="Texture2D" uid="uid://gh7v1em7nd2y" path="res://img/barra de carga/carga_36.png" id="62_76wqk"]
[ext_resource type="Texture2D" uid="uid://baaa0druvfhyo" path="res://img/barra de carga/carga_37.png" id="63_ecgcw"]
[ext_resource type="Texture2D" uid="uid://copm7et0msex7" path="res://img/barra de carga/carga_38.png" id="64_w066m"]
[ext_resource type="Texture2D" uid="uid://cx37xsfjafgnw" path="res://img/barra de carga/carga_39.png" id="65_grswq"]
[ext_resource type="Texture2D" uid="uid://c6p6oghu8exdk" path="res://img/barra de carga/carga_40.png" id="66_clbve"]
[ext_resource type="Texture2D" uid="uid://cw5s600tpd723" path="res://img/barra de carga/carga_41.png" id="67_exfc2"]
[ext_resource type="Texture2D" uid="uid://ds0mkf46wwy4p" path="res://img/barra de carga/carga_42.png" id="68_bqmqn"]
[ext_resource type="Texture2D" uid="uid://cv220fk4id5dl" path="res://img/barra de carga/carga_43.png" id="69_dgr5r"]
[ext_resource type="Texture2D" uid="uid://c7cci713nxn01" path="res://img/barra de carga/carga_44.png" id="70_lictc"]
[ext_resource type="Texture2D" uid="uid://bphpbihrgyf3y" path="res://img/barra de carga/carga_45.png" id="71_xphys"]
[ext_resource type="Texture2D" uid="uid://c0304ymyd26t2" path="res://img/barra de carga/carga_46.png" id="72_jmwe5"]
[ext_resource type="Texture2D" uid="uid://seb5me8ddya7" path="res://img/barra de carga/carga_47.png" id="73_yeesc"]
[ext_resource type="Texture2D" uid="uid://1m2rlute7sfu" path="res://img/barra de carga/carga_48.png" id="74_tkbr3"]
[ext_resource type="Texture2D" uid="uid://cr4yyl15oaaxg" path="res://img/barra de carga/carga_49.png" id="75_i8b0l"]
[ext_resource type="Texture2D" uid="uid://by6qmjtl3afmt" path="res://img/barra de carga/carga_50.png" id="76_ndwmm"]
[ext_resource type="Texture2D" uid="uid://bx0mc78uely8c" path="res://img/barra de carga/carga_51.png" id="77_4bfvl"]
[ext_resource type="Texture2D" uid="uid://toiij0sviiuc" path="res://img/barra de carga/carga_52.png" id="78_e4n6f"]
[ext_resource type="Texture2D" uid="uid://b1g0n7wr2e0uj" path="res://img/barra de carga/carga_53.png" id="79_s6y0u"]
[ext_resource type="Texture2D" uid="uid://dyg5jyuk258g8" path="res://img/barra de carga/carga_54.png" id="80_a0hqq"]
[ext_resource type="Texture2D" uid="uid://dkgl2wjypp7a1" path="res://img/barra de carga/carga_55.png" id="81_yh7ua"]
[ext_resource type="Texture2D" uid="uid://c7j0yut2ub5by" path="res://img/barra de carga/carga_56.png" id="82_vu51a"]
[ext_resource type="Texture2D" uid="uid://ddtf1q75cnshk" path="res://img/barra de carga/carga_57.png" id="83_cujhr"]
[ext_resource type="Texture2D" uid="uid://bltmohghfcql8" path="res://img/barra de carga/carga_58.png" id="84_c57hb"]
[ext_resource type="Texture2D" uid="uid://bqxsr3m2efwth" path="res://img/barra de carga/carga_59.png" id="85_h3ual"]
[ext_resource type="Texture2D" uid="uid://bb2kp32w600j7" path="res://img/barra de carga/carga_60.png" id="86_1drtk"]
[ext_resource type="Texture2D" uid="uid://c6xelmsn5eoa6" path="res://img/barra de carga/carga_61.png" id="87_e5xxk"]
[ext_resource type="Texture2D" uid="uid://b5nyny7awp66d" path="res://img/barra de carga/carga_62.png" id="88_h6q8l"]
[ext_resource type="Texture2D" uid="uid://berm4fll6woco" path="res://img/barra de carga/carga_63.png" id="89_8pa0k"]
[ext_resource type="Texture2D" uid="uid://cdx8xutt75wwu" path="res://img/barra de carga/carga_64.png" id="90_b0qe4"]
[ext_resource type="Texture2D" uid="uid://d053iv3vig24b" path="res://img/barra de carga/carga_65.png" id="91_npyxm"]
[ext_resource type="Texture2D" uid="uid://b5kxrtgcexral" path="res://img/barra de carga/carga_66.png" id="92_0ltje"]
[ext_resource type="Texture2D" uid="uid://kr5wwjlciulw" path="res://img/barra de carga/carga_67.png" id="93_ls2jh"]
[ext_resource type="Texture2D" uid="uid://ca12y7nhbgxs" path="res://img/barra de carga/carga_68.png" id="94_cmyen"]
[ext_resource type="Texture2D" uid="uid://kpjexok2kf2e" path="res://img/barra de carga/carga_69.png" id="95_dedj6"]
[ext_resource type="Texture2D" uid="uid://dk1gw5wv4ttl6" path="res://img/barra de carga/carga_70.png" id="96_67ku8"]
[ext_resource type="Texture2D" uid="uid://dpt3ft4iie7pb" path="res://img/barra de carga/carga_71.png" id="97_t7go7"]
[ext_resource type="Texture2D" uid="uid://ckt7kl7elp8eg" path="res://img/barra de carga/carga_72.png" id="98_vlqjr"]
[ext_resource type="Texture2D" uid="uid://3pacf3tspbly" path="res://img/barra de carga/carga_73.png" id="99_1y68o"]
[ext_resource type="Texture2D" uid="uid://cy2lju7wmqpsd" path="res://img/barra de carga/carga_74.png" id="100_427nk"]
[ext_resource type="Texture2D" uid="uid://c7guhro137iqs" path="res://img/barra de carga/carga_75.png" id="101_rqlhl"]
[ext_resource type="Texture2D" uid="uid://dmcyystimjqn8" path="res://img/barra de carga/carga_76.png" id="102_k38a7"]
[ext_resource type="Texture2D" uid="uid://c8kusmudsq6t" path="res://img/barra de carga/carga_77.png" id="103_7dadk"]
[ext_resource type="Texture2D" uid="uid://55nlfbxdkaa8" path="res://img/barra de carga/carga_78.png" id="104_1vui4"]
[ext_resource type="Texture2D" uid="uid://bvk4k8m618xyj" path="res://img/barra de carga/carga_79.png" id="105_vdygf"]
[ext_resource type="Texture2D" uid="uid://ddqpuso0umnjf" path="res://img/barra de carga/carga_80.png" id="106_pro2e"]
[ext_resource type="Texture2D" uid="uid://c0c2nfloiiq5k" path="res://img/barra de carga/carga_81.png" id="107_j41ej"]
[ext_resource type="Texture2D" uid="uid://bsyrjopqdv2km" path="res://img/barra de carga/carga_82.png" id="108_6d0uu"]
[ext_resource type="Texture2D" uid="uid://bsymqnbwck78h" path="res://img/barra de carga/carga_83.png" id="109_5qy6v"]
[ext_resource type="Texture2D" uid="uid://crardmm0cl4kn" path="res://img/barra de carga/carga_84.png" id="110_4stlc"]
[ext_resource type="Texture2D" uid="uid://d3i7xlekdkkio" path="res://img/barra de carga/carga_85.png" id="111_jav15"]
[ext_resource type="Texture2D" uid="uid://b61haej3rm6lg" path="res://img/barra de carga/carga_86.png" id="112_31x05"]
[ext_resource type="Texture2D" uid="uid://b2xdb6qphqntm" path="res://img/barra de carga/carga_87.png" id="113_dcks7"]
[ext_resource type="Texture2D" uid="uid://c2cbftsx7idi0" path="res://img/barra de carga/carga_88.png" id="114_mcm17"]
[ext_resource type="Texture2D" uid="uid://c4ue4xqnifk1b" path="res://img/barra de carga/carga_89.png" id="115_k212l"]
[ext_resource type="Texture2D" uid="uid://dqot5kmbak2cx" path="res://img/barra de carga/carga_90.png" id="116_b3mnc"]
[ext_resource type="Texture2D" uid="uid://cgqbge1uy03ci" path="res://img/barra de carga/carga_91.png" id="117_74ics"]
[ext_resource type="Texture2D" uid="uid://s36w1612oget" path="res://img/barra de carga/carga_92.png" id="118_ohksa"]
[ext_resource type="Texture2D" uid="uid://choy8ku3e06yf" path="res://img/barra de carga/carga_93.png" id="119_0crpx"]
[ext_resource type="Texture2D" uid="uid://ci4g6fc5lq1sk" path="res://img/barra de carga/carga_94.png" id="120_kyuct"]
[ext_resource type="Texture2D" uid="uid://duvhv5nnj1o8s" path="res://img/barra de carga/carga_95.png" id="121_13h2u"]
[ext_resource type="Texture2D" uid="uid://bsmb1btap6tkv" path="res://img/barra de carga/carga_96.png" id="122_g1wq8"]
[ext_resource type="Texture2D" uid="uid://dej6px2604tgn" path="res://img/nucleo_01/tarea_2/red_3.png" id="123_ad380"]
[ext_resource type="PackedScene" uid="uid://c0pnxckwulqw5" path="res://scenes/actividades/presionar_anim.tscn" id="124_ugq77"]
[ext_resource type="Texture2D" uid="uid://b4dhorxs58qoc" path="res://img/nucleo_01/tarea_1/enviar.png" id="124_vf85d"]
[ext_resource type="Texture2D" uid="uid://p6gwj3wiarhk" path="res://img/nucleo_01/tarea_1/enviar2.png" id="125_a8ou6"]
[ext_resource type="Texture2D" uid="uid://cfxmbl77jxa2s" path="res://img/nucleo_01/tarea_2/info_2.png" id="126_s228v"]
[ext_resource type="PackedScene" uid="uid://bgs2ty3i0fjmf" path="res://scenes/elementos/boton_s.tscn" id="127_nxxt1"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5wwel"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_j0085")
}, {
"duration": 1.0,
"texture": ExtResource("3_odkld")
}, {
"duration": 1.0,
"texture": ExtResource("4_arhdg")
}, {
"duration": 1.0,
"texture": ExtResource("5_nulrn")
}, {
"duration": 1.0,
"texture": ExtResource("6_gxunf")
}, {
"duration": 1.0,
"texture": ExtResource("7_et666")
}, {
"duration": 1.0,
"texture": ExtResource("8_pxarg")
}, {
"duration": 1.0,
"texture": ExtResource("9_8mbff")
}, {
"duration": 1.0,
"texture": ExtResource("10_lpqw8")
}, {
"duration": 1.0,
"texture": ExtResource("11_ndkkh")
}, {
"duration": 1.0,
"texture": ExtResource("12_yuhj7")
}, {
"duration": 1.0,
"texture": ExtResource("13_yhtjl")
}, {
"duration": 1.0,
"texture": ExtResource("14_20o8n")
}, {
"duration": 1.0,
"texture": ExtResource("15_hljlb")
}, {
"duration": 1.0,
"texture": ExtResource("16_2s8vq")
}, {
"duration": 1.0,
"texture": ExtResource("17_qm0we")
}, {
"duration": 1.0,
"texture": ExtResource("18_xfwra")
}, {
"duration": 1.0,
"texture": ExtResource("19_bvngo")
}, {
"duration": 1.0,
"texture": ExtResource("20_cf3eo")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_0nevl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("27_5mtda")
}, {
"duration": 1.0,
"texture": ExtResource("28_vuvip")
}, {
"duration": 1.0,
"texture": ExtResource("29_duhxu")
}, {
"duration": 1.0,
"texture": ExtResource("30_v0ovj")
}, {
"duration": 1.0,
"texture": ExtResource("31_u10fe")
}, {
"duration": 1.0,
"texture": ExtResource("32_fk2fv")
}, {
"duration": 1.0,
"texture": ExtResource("33_e03rd")
}, {
"duration": 1.0,
"texture": ExtResource("34_aurd6")
}, {
"duration": 1.0,
"texture": ExtResource("35_r66hi")
}, {
"duration": 1.0,
"texture": ExtResource("36_eovrg")
}, {
"duration": 1.0,
"texture": ExtResource("37_lohhl")
}, {
"duration": 1.0,
"texture": ExtResource("38_3ifv8")
}, {
"duration": 1.0,
"texture": ExtResource("39_s37v5")
}, {
"duration": 1.0,
"texture": ExtResource("40_qpgoi")
}, {
"duration": 1.0,
"texture": ExtResource("41_qf5ab")
}, {
"duration": 1.0,
"texture": ExtResource("42_3wdcn")
}, {
"duration": 1.0,
"texture": ExtResource("43_ilkj8")
}, {
"duration": 1.0,
"texture": ExtResource("44_yicvn")
}, {
"duration": 1.0,
"texture": ExtResource("45_xa5lr")
}, {
"duration": 1.0,
"texture": ExtResource("46_nfmrl")
}, {
"duration": 1.0,
"texture": ExtResource("47_o54un")
}, {
"duration": 1.0,
"texture": ExtResource("48_jtjs3")
}, {
"duration": 1.0,
"texture": ExtResource("49_8jolj")
}, {
"duration": 1.0,
"texture": ExtResource("50_s5lp3")
}, {
"duration": 1.0,
"texture": ExtResource("51_ivy62")
}, {
"duration": 1.0,
"texture": ExtResource("52_v8hno")
}, {
"duration": 1.0,
"texture": ExtResource("53_6hf4j")
}, {
"duration": 1.0,
"texture": ExtResource("54_5hrv1")
}, {
"duration": 1.0,
"texture": ExtResource("55_d4k0q")
}, {
"duration": 1.0,
"texture": ExtResource("56_n4cjt")
}, {
"duration": 1.0,
"texture": ExtResource("57_sjsqe")
}, {
"duration": 1.0,
"texture": ExtResource("58_t3cxs")
}, {
"duration": 1.0,
"texture": ExtResource("59_w1grw")
}, {
"duration": 1.0,
"texture": ExtResource("60_8g7ul")
}, {
"duration": 1.0,
"texture": ExtResource("61_4sb17")
}, {
"duration": 1.0,
"texture": ExtResource("62_76wqk")
}, {
"duration": 1.0,
"texture": ExtResource("63_ecgcw")
}, {
"duration": 1.0,
"texture": ExtResource("64_w066m")
}, {
"duration": 1.0,
"texture": ExtResource("65_grswq")
}, {
"duration": 1.0,
"texture": ExtResource("66_clbve")
}, {
"duration": 1.0,
"texture": ExtResource("67_exfc2")
}, {
"duration": 1.0,
"texture": ExtResource("68_bqmqn")
}, {
"duration": 1.0,
"texture": ExtResource("69_dgr5r")
}, {
"duration": 1.0,
"texture": ExtResource("70_lictc")
}, {
"duration": 1.0,
"texture": ExtResource("71_xphys")
}, {
"duration": 1.0,
"texture": ExtResource("72_jmwe5")
}, {
"duration": 1.0,
"texture": ExtResource("73_yeesc")
}, {
"duration": 1.0,
"texture": ExtResource("74_tkbr3")
}, {
"duration": 1.0,
"texture": ExtResource("75_i8b0l")
}, {
"duration": 1.0,
"texture": ExtResource("76_ndwmm")
}, {
"duration": 1.0,
"texture": ExtResource("77_4bfvl")
}, {
"duration": 1.0,
"texture": ExtResource("78_e4n6f")
}, {
"duration": 1.0,
"texture": ExtResource("79_s6y0u")
}, {
"duration": 1.0,
"texture": ExtResource("80_a0hqq")
}, {
"duration": 1.0,
"texture": ExtResource("81_yh7ua")
}, {
"duration": 1.0,
"texture": ExtResource("82_vu51a")
}, {
"duration": 1.0,
"texture": ExtResource("83_cujhr")
}, {
"duration": 1.0,
"texture": ExtResource("84_c57hb")
}, {
"duration": 1.0,
"texture": ExtResource("85_h3ual")
}, {
"duration": 1.0,
"texture": ExtResource("86_1drtk")
}, {
"duration": 1.0,
"texture": ExtResource("87_e5xxk")
}, {
"duration": 1.0,
"texture": ExtResource("88_h6q8l")
}, {
"duration": 1.0,
"texture": ExtResource("89_8pa0k")
}, {
"duration": 1.0,
"texture": ExtResource("90_b0qe4")
}, {
"duration": 1.0,
"texture": ExtResource("91_npyxm")
}, {
"duration": 1.0,
"texture": ExtResource("92_0ltje")
}, {
"duration": 1.0,
"texture": ExtResource("93_ls2jh")
}, {
"duration": 1.0,
"texture": ExtResource("94_cmyen")
}, {
"duration": 1.0,
"texture": ExtResource("95_dedj6")
}, {
"duration": 1.0,
"texture": ExtResource("96_67ku8")
}, {
"duration": 1.0,
"texture": ExtResource("97_t7go7")
}, {
"duration": 1.0,
"texture": ExtResource("98_vlqjr")
}, {
"duration": 1.0,
"texture": ExtResource("99_1y68o")
}, {
"duration": 1.0,
"texture": ExtResource("100_427nk")
}, {
"duration": 1.0,
"texture": ExtResource("101_rqlhl")
}, {
"duration": 1.0,
"texture": ExtResource("102_k38a7")
}, {
"duration": 1.0,
"texture": ExtResource("103_7dadk")
}, {
"duration": 1.0,
"texture": ExtResource("104_1vui4")
}, {
"duration": 1.0,
"texture": ExtResource("105_vdygf")
}, {
"duration": 1.0,
"texture": ExtResource("106_pro2e")
}, {
"duration": 1.0,
"texture": ExtResource("107_j41ej")
}, {
"duration": 1.0,
"texture": ExtResource("108_6d0uu")
}, {
"duration": 1.0,
"texture": ExtResource("109_5qy6v")
}, {
"duration": 1.0,
"texture": ExtResource("110_4stlc")
}, {
"duration": 1.0,
"texture": ExtResource("111_jav15")
}, {
"duration": 1.0,
"texture": ExtResource("112_31x05")
}, {
"duration": 1.0,
"texture": ExtResource("113_dcks7")
}, {
"duration": 1.0,
"texture": ExtResource("114_mcm17")
}, {
"duration": 1.0,
"texture": ExtResource("115_k212l")
}, {
"duration": 1.0,
"texture": ExtResource("116_b3mnc")
}, {
"duration": 1.0,
"texture": ExtResource("117_74ics")
}, {
"duration": 1.0,
"texture": ExtResource("118_ohksa")
}, {
"duration": 1.0,
"texture": ExtResource("119_0crpx")
}, {
"duration": 1.0,
"texture": ExtResource("120_kyuct")
}, {
"duration": 1.0,
"texture": ExtResource("121_13h2u")
}, {
"duration": 1.0,
"texture": ExtResource("122_g1wq8")
}],
"loop": false,
"name": &"carga",
"speed": 18.0
}]

[node name="Actividad02" type="Node2D"]
script = ExtResource("1_chl37")

[node name="Background" type="AnimatedSprite2D" parent="."]
modulate = Color(0.209908, 0.209908, 0.209908, 1)
scale = Vector2(2.4, 1.8)
sprite_frames = SubResource("SpriteFrames_5wwel")
centered = false

[node name="Borde" type="Sprite2D" parent="."]
texture = ExtResource("21_u5ljh")
centered = false

[node name="Redimensionar" type="Sprite2D" parent="."]
position = Vector2(754, 542)
texture = ExtResource("22_7xbcg")

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 587.5
offset_top = 871.5
offset_right = 912.5
offset_bottom = 943.5
texture_normal = ExtResource("23_r716y")
texture_hover = ExtResource("24_rkg4b")

[node name="Info" type="Sprite2D" parent="."]
visible = false
position = Vector2(1464.5, 527.5)
texture = ExtResource("25_jb7v4")

[node name="Red2" type="Sprite2D" parent="."]
visible = false
position = Vector2(754, 542)
texture = ExtResource("26_l5u4p")

[node name="Barra" type="AnimatedSprite2D" parent="."]
visible = false
modulate = Color(0.0745098, 0.866667, 0.0588235, 1)
position = Vector2(752, 587)
scale = Vector2(0.6125, 0.533333)
sprite_frames = SubResource("SpriteFrames_0nevl")
animation = &"carga"

[node name="Red3" type="Sprite2D" parent="."]
visible = false
position = Vector2(754, 542)
texture = ExtResource("123_ad380")

[node name="Presionar" parent="." instance=ExtResource("124_ugq77")]
modulate = Color(0.0745098, 0.866667, 0.0588235, 1)

[node name="Enviar" type="TextureButton" parent="."]
visible = false
offset_left = 649.5
offset_top = 864.5
offset_right = 841.5
offset_bottom = 938.5
texture_normal = ExtResource("124_vf85d")
texture_hover = ExtResource("125_a8ou6")

[node name="Info2" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("126_s228v")
centered = false

[node name="BotonS" parent="Info2" instance=ExtResource("127_nxxt1")]
offset_left = 913.0
offset_top = 598.0
offset_right = 1041.0
offset_bottom = 643.0
color = Color(0.0745098, 0.866667, 0.0588235, 1)
texto = "CERRAR"

[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="animation_finished" from="Barra" to="." method="_on_barra_animation_finished"]
[connection signal="button_down" from="Enviar" to="." method="_on_enviar_button_down"]
[connection signal="button_down" from="Info2/BotonS" to="." method="_on_boton_s_button_down"]
